--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@ ga('send', 'pageview');
 <!-- Site Title
 ================================================== -->
 <div class="mainheading">
-    <h1 class="sitetitle">{{ site.name }}</h1>
+    <a class="navbar-brand" href="{{ site.baseurl }}/"><h1 class="sitetitle">{{ site.name }}</h1></a>
     <p class="lead">
         {{ site.description }}
     </p>
