--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
 
 <title>{{ page.title }} | {{site.name}}</title>
 
@@ -23,7 +22,6 @@
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
 <link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
 
-</head>
 
 {% if jekyll.environment == 'production' %}
 <!-- change your GA id in _config.yml -->
@@ -38,6 +36,8 @@
   gtag('config', '{{site.google_analytics}}');
 </script>
 {% endif %}
+
+</head>
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{layout}}">
@@ -134,13 +134,7 @@
 ================================================== -->
 <div class="alertbar">
 	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; No pierdas las actualizaciones, subscribete a nuestro boletin</span>
-        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
-            <div class="mc-field-group">
-            <input type="email" placeholder="Correo" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
-            <input type="submit" value="Subscribirse" name="subscribe" class="heart">
-            </div>
-        </form>
+		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; No pierdas las actualizaciones, sigue nuestra cuenta de <a href="https://twitter.com/GazetaEorzea"><i class="fab fa-twitter"></i>twitter.</a></span>
 	</div>
 </div>
 {% endif %}
