--- a/docs/assets/css/screen.css
+++ b/docs/assets/css/screen.css
@@ -334,6 +334,8 @@ span.post-read-more a:hover {
     font-size: 1.1rem;
     line-height: 1.84;
     color: rgba(0, 0, 0, .8);
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 blockquote {
