--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -134,7 +134,7 @@
 ================================================== -->
 <div class="alertbar">
 	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; No pierdas las actualizaciones, sigue nuestra cuenta de <a href="https://twitter.com/GazetaEorzea"><i class="fab fa-twitter"></i>twitter.</a></span>
+		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; No pierdas las actualizaciones, sigue nuestra cuenta de <a href="https://twitter.com/GacetaEorzea"><i class="fab fa-twitter"></i>twitter.</a></span>
 	</div>
 </div>
 {% endif %}
