--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -338,6 +338,10 @@ span.post-read-more a:hover {
     text-justify: inter-word;
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+	text-align: left;
+}
+
 blockquote {
     border-left: 4px solid #00ab6b;
     padding: 0 20px;
