--- a/_includes/share.html
+++ b/_includes/share.html
@@ -4,7 +4,7 @@
     </p>
     <ul>
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://twitter.com/intent/tweet?text={{ page.title }}&nbsp;%23FFXIVESP&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'twitter-share', 'width=750,height=500');return false;">
+            <a target="_blank" href="https://twitter.com/intent/tweet?text={{ page.title }}&nbsp;%23FFXIVESP&nbsp;%23FFXIV&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'twitter-share', 'width=750,height=500');return false;">
                 <i class="fab fa-twitter"></i>
             </a>
         </li>
