--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,3 +1,3 @@
 <div class="youtube-wrapper">
-    <iframe src="https://www.youtube.com/embed/{{ include.id }}" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/{{ include.id }}?hl=es&cc_lang_pref=es&cc=1" allowfullscreen></iframe>
 </div>
