--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -146,8 +146,7 @@
 
 <!-- Site Title
 ================================================== -->
-<div class="mainheading">
-    <a class="navbar-brand" href="{{ site.baseurl }}/"><h1 class="sitetitle">{{ site.name }}</h1></a>
+<div class="mainheading">    
     <p class="lead">
         {{ site.description }}
     </p>
@@ -164,7 +163,7 @@
 ================================================== -->
 <div class="alertbar">
 	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; No pierdas las actualizaciones, sigue nuestra cuenta de <a href="https://twitter.com/GacetaEorzea"><i class="fab fa-twitter"></i>twitter.</a></span>
+		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}" height="100"> &nbsp; No pierdas las actualizaciones, sigue nuestra cuenta de <a href="https://twitter.com/GacetaEorzea"><i class="fab fa-twitter"></i>twitter.</a></span>
 	</div>
 </div>
 {% endif %}
