--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,11 +108,15 @@
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Articulos</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Artículos</a>
                 </li>
 
                 <li class="nav-item">
-                <a class="nav-link" href="{{ site.baseurl }}/categories">Categorias</a>
+                <a class="nav-link" href="{{ site.baseurl }}/discord">Discord</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/categories">Categorías</a>
                 </li>
 
                 <li class="nav-item">
