--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,13 +85,19 @@
 ================================================== -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
 
-    <div class="container pr-0">
+    <div class="container pr-0">    
 
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
     </a>
-    <!-- End Logo -->
+    <!-- End Logo -->    
+
+    
+    <ul class="navbar-nav ml-auto"> 
+        <li class="nav-item"><a href="https://twitter.com/GacetaEorzea" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li class="nav-item"><a href="/discord"><i class="fab fa-discord"></i></i></a></li>            
+    </ul>            
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
