cambio de sitio

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,12 +93,6 @@
     </a>
     <!-- End Logo -->    
 
-    
-    <ul class="navbar-nav ml-auto"> 
-        <li class="nav-item"><a href="https://twitter.com/GacetaEorzea" target="_blank"><i class="fab fa-twitter"></i></a></li>
-        <li class="nav-item"><a href="/discord"><i class="fab fa-discord"></i></i></a></li>            
-    </ul>            
-
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -157,6 +151,8 @@
 <!-- Site Title
 ================================================== -->
 <div class="mainheading">    
+    <a href="https://twitter.com/GacetaEorzea" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="/discord"><i class="fab fa-discord"></i></a>
     <p class="lead">
         {{ site.description }}
     </p>
