--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,6 +116,10 @@
                 </li>
 
                 <li class="nav-item">
+                <a class="nav-link" href="{{ site.baseurl }}/colabora">¡Colabora!</a>
+                </li>
+
+                <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/categories">Categorías</a>
                 </li>
 
@@ -124,8 +128,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ site.baseurl }}/streamers">Directos</a>
-                    </li>
+                <a class="nav-link" href="{{ site.baseurl }}/streamers">Directos</a>
+                </li>
 
                 <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/about">Acerca de..</a>
