--- a/docs/assets/css/screen.css
+++ b/docs/assets/css/screen.css
@@ -919,3 +919,69 @@ iframe {
     height: 100%;
     border: 0;
 }
+
+.Scholar {
+    color:#8657ff
+}
+
+.Astrologian {
+    color:#ffe74a
+}
+.Monk {
+    color:#d69c00
+}
+
+.Ninja {
+    color:#af1964
+}
+
+.WhiteMage {
+    color:#fff0dc
+}
+
+.DarkKnight {
+    color:#d126cc
+}
+
+.Paladin {
+    color:#a8d2e6
+}
+
+.Bard {
+    color:#91ba5e
+}
+
+.Dragoon {
+    color:#4164cd
+}
+
+.Warrior {
+    color:#cf2621
+}
+
+.Machinist {
+    color:#6ee1d6
+}
+
+.Summoner {
+    color:#2d9b78
+}
+
+.BlackMage {
+    color:#a579d6
+}
+
+.RedMage {
+    color:#e87b7b
+}
+.Samurai {
+    color:#e46d04
+}
+
+.Dancer {
+    color:#e2b0af
+}
+
+.Gunbreaker {
+    color:#796d30
+}   
