--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,18 @@ layout: default
         <h2><span>{{ page.title }}</span></h2>
     </div>
 
+    <!-- Post Featured Image -->
+    {% if page.image %}
+    <p align="center">
+    {% if site.lazyimages == "enabled" %}
+    <img class="featured-image img-fluid lazyimg" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII=" data-src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+    {% else %}
+    <img class="featured-image img-fluid" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+    {% endif %}
+    </p>
+    {% endif %}
+    <!-- End Featured Image -->
+
     <div class="article-post">
     {{content}}
     </div>
