--- a/docs/assets/css/screen.css
+++ b/docs/assets/css/screen.css
@@ -867,7 +867,7 @@ iframe {
 .spoiler:after {
     position: absolute;
     opacity: 0;
-    content: 'Click to reveal spoiler';
+    content: 'Click aquí para mostrar';
     top: 45%;
     left: calc(50% - 100px);
     text-shadow: none;
